--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,6 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+BASE_URL="https://hotels4.p.rapidapi.com/"
+API_HOST="hotels4.p.rapidapi.com"
+API_KEY="ad2502503bmsh9a2c2f76304eca6p1a6db4jsn1aa56433e784"
